@@ -1,3 +1,6 @@
+2023-01-22  Markus Gans  <guru.mail@muenster.de>
+	* Fix focus-in and focus-out errors FComboBox and FSpinBox
+
 2023-01-15  Markus Gans  <guru.mail@muenster.de>
 	* Speed-up of the update routine for virtual terminal
 
